# csv-validator

./: README.md  pyproject.toml
test/: test-validator.py
validator/: __init__.py  main.py  parse_csv.py
