[project]
name = "csvmatch"
version = "0.0.0"
description = "A CSV validator for Guardrails AI."
authors = [
    {name = "Hyperparam", email = "kenny@hyperparam.app"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "rstr",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2"
]